--- a/BA_argo_doc/systementwurf.tex
+++ b/BA_argo_doc/systementwurf.tex
@@ -112,6 +112,14 @@ Um die beiden Teilbereiche logisch zu trennen und modular vorhalten zu können, 
 %
 % - Darstellung der Daten -- ...
 
+Das Aussehen der Applikation soll dem Muster von gängigen Webapplikationen entsprechen. In Abbildung \ref{fig:entwurf_webseite} ist ein erster Grobentwurf der Applikation zu sehen.
+
+Zentrales element der Applikation ist die Darstellung einer Karte. Über diese sollen die letzten Positionen der Karte ersichtlich sein.
+
+
+Klickt man eine Messstation an, so wird auf der linken Seite ein weiteres Element ind ie Seite eingefügt. Dieses dient zur Darstellung der Messwerte des jeweiligen ArgoFloats.
+
+
 
 \begin{figure}[h!]
     \centering
