--- a/BA_argo_doc/preamble.tex
+++ b/BA_argo_doc/preamble.tex
@@ -108,7 +108,7 @@ breaklinks=true] {hyperref}
     basicstyle=\ttm,
     otherkeywords={self, yield},             % Add keywords here
     keywordstyle=\ttb\color{deepblue},
-    emph={ArgoFloat,__init__,__iter__, __next__,__enter__,__exit__, __repr__, Measurement, Location, Profile, Record },          % Custom highlighting
+    emph={ArgoFloat,__init__,__iter__, __next__,__enter__,__exit__, __repr__, Measurement, Location, Profile, Record, ExtractorFactory, DataBaseWriter, DatasetContextManager, ArgoFloatProfile, Float },          % Custom highlighting
     emphstyle=\ttb\color{deepred},    % Custom highlighting style
     stringstyle=\color{deepgreen},
     frame=single,                         % Any extra options here
