bib - add openlayers 3 beginners guide

--- a/BA_argo_doc/bib.bib
+++ b/BA_argo_doc/bib.bib
@@ -169,3 +169,12 @@
 	urldate = {2018-01-13}
 }
 
+@book{1782162364,
+  Author = {Thomas Gratier and Paul Spencer and Erik Hazzard},
+  Title = {OpenLayers 3 Beginner s Guide},
+  Publisher = {Packt Publishing - ebooks Account},
+  Year = {2015},
+  ISBN = {1782162364},
+
+}
+
