--- a/BA_argo_doc/einleitung.tex
+++ b/BA_argo_doc/einleitung.tex
@@ -2,14 +2,13 @@
 
     \subsection{Motivation}
     
-    Die Menschheit sieht sich gerade in der einmaligen Lage, über eine noch nie gekannte Ansammlung von Informationen zu verfügen. Die Komplexität der Technik und die Flüchtigkeit der Medien lässt auch vermuten, dass dieser Zustand nicht ewig anhalten wird.
+    Die Menschheit sieht sich gerade in einer einmaligen Lage. Wir verfügen über eine noch nie gewesene Ansammlung an Informationen. Noch nie war es so einfach möglich sich Wissen anzueignen. Die Komplexität der dafür benötigten Technik und die Flüchtigkeit der Informationsmedien lässt auch vermuten, dass dieser Zustand nicht ewig anhalten wird.
+    Doch diese Chance wird von vielen Menschen nicht genutzt. 
     
-    Doch diese Chance wird von vielen Menschen nicht genutzt. Anstatt, dass  Verfahren erarbeitet werden, die Informationen zu Bewerten, werden die Prinzipien der wissenschaftlichen Evidenz abgelehnt. Anstatt, dass Menschen sich aus den Informationen Wissen generieren, werden überprüfbare Fakten wie dem Klimawandel nicht geglaubt.
+    Anstatt, dass  Verfahren erarbeitet werden, die Informationen zu Bewerten, werden die Prinzipien der wissenschaftlichen Evidenz abgelehnt. Anstatt, dass Menschen sich aus den Informationen Wissen generieren, werden überprüfbare Fakten wie dem Klimawandel nicht geglaubt.\\
     
-    Es scheint als wären diese Menschen der Flut an Informationen überdrüssig, als wende sich ein großer Teil überfordert davon ab.\\
-    
-    Die Frage ist, was kann dazu beitragen dieses Potential mehr zu nutzen? Was kann der Transfer von der reinen Information hin zum Wissen erleichtern und ermöglichen?
-    
+    Es scheint als wären diese Menschen der Flut an Informationen überdrüssig, als wende sich ein großer Teil überfordert davon ab.
+    Die Frage ist, was kann dazu beitragen dieses Potential mehr zu nutzen? Was kann der Transfer von der reinen Information hin zum Wissen erleichtern und ermöglichen? Über welche Mittel verfügt die Informatik, Daten in einen Kontext einzubetten, über die Menschen an wissenschaftliche Daten herangeführt werden können?
     
     \subsection{Zielsetzung}
     
