proto - SQLAlchemy uses Temp_database for DataInsertion.

--- a/BA_argo_doc/grundlagen.tex
+++ b/BA_argo_doc/grundlagen.tex
@@ -170,6 +170,18 @@
 % BEGIN OL3
     \subsubsection{openLayers}
     
+    OpenLayers ist ein Framework zur Entwicklung webbasierter Geoapplikationen. Dieses ist in JavaScript entwickelt und erlaubt durch eine layerstruktur den Aufbau komplexer Kartenapplikationen. Dabei lassen sich die Elemente der Karten durch folgende Objekte strukturieren:
+    
+    \begin{description}
+     \item [\texttt{ol.Map}]  
+     \item [\texttt{ol.View}] 
+     \item [\texttt{ol.Overlay}]
+     \item [\texttt{ol.layer.Base}]
+     \item [\texttt{ol.interaction.Interaction}]
+     \item [\texttt{ol.control.Control}]
+    \end{description}
+
+    
     OpenLayers ist eine Programmbibliotek um interaktive Geoapplikationen zu entwickeln. Das Framework ist in Javascript entwickelt und nimmt alle benötigten Berechnungen auf Clientseite vor.
     
     Die Bibliothek erlaubt es Kartenmaterial aus verschiedensten Quellen zu Rendern. Dabei können Kachel- oder auch Vektorbasierte Materialien eingebunden werden.
@@ -183,6 +195,8 @@
     Neben der reinen Darstellung erlaubt die Bibliothek auch die Definition von  "`\texttt{controls}"'. Dabei lassen sich Zoom-, Rotations- und Mouse-Positions-Effekte umsetzen. Siehe Quelle \cite{openlayersbeginnersguide} S. 296
     
     Zu zeichnende Daten lassen sich über GEOJson-Objekte modellieren. Die Bibliothek folgt einem objektorientierten Entwurfsmuster und erlaubt das transparente Hinzufügen und Ändern von Layern der Karte.
+    
+    
 
 % END     
     \subsubsection{D3}
