Dirty commit with latest changes

--- a/BA_argo_doc/grundlagen.tex
+++ b/BA_argo_doc/grundlagen.tex
@@ -1,4 +1,7 @@
 \section{Grundlagen}
+
+    \subsection{Object Ralational Mapper}
+
     \subsection{Verwendete Software}
     \subsubsection{Network Common Data Format}
     
