--- a/BA_argo_doc/preamble.tex
+++ b/BA_argo_doc/preamble.tex
@@ -148,8 +148,9 @@ breaklinks=true] {hyperref}
 % -------------------------------------------------------------------------------------
 
 \renewcaptionname{ngerman}{\contentsname}{Inhalt}
-\renewcaptionname{ngerman}{\listfigurename}{Abbildungen}
-\renewcaptionname{ngerman}{\listtablename}{Tabellen}
+\renewcaptionname{ngerman}{\listfigurename}{Abbildungsverzeichnis}
+\renewcaptionname{ngerman}{\listtablename}{Tabellenverzeichnis}
+\renewcommand\lstlistlistingname{Quellcodeverzeichnis}
 \renewcaptionname{ngerman}{\figurename}{Abbildung}
 \renewcaptionname{ngerman}{\tablename}{Tabelle}
 \setkomafont{caption}{\footnotesize\itshape}
