--- a/BA_argo_doc/realisierung.tex
+++ b/BA_argo_doc/realisierung.tex
@@ -9,7 +9,7 @@
 \end{figure}
 
 % BEGIN DATENAGGREGATION
-\subsection{Schnittstellen Datenaggregation}
+\subsection{Schnittstellen der Datenaggregation}
 
 Bei der Aggregation der Daten aus dem Argo Programm sind Schnittstellen auszuarbeiten. Diese Implementierung ist im folgenden beschrieben. 
 
@@ -105,7 +105,7 @@ In Zeile 4 ist zu sehen, das das Model von der Oberklasse \pythoninline{db.Model
 
 \subsection{Flask Webapp}
 
-\subsection{Kartendarstellung Openlayers}
+\subsection{Kartendarstellung über OpenLayers}
 
 
 
