DOC - Einleitung neu

--- a/BA_argo_doc/einleitung.tex
+++ b/BA_argo_doc/einleitung.tex
@@ -1,18 +1,22 @@
 
 \section{Einleitung}
 
-    Die Menschheit sieht sich gerade in einer einmaligen Lage. Wir verfügen über eine noch nie gewesene Ansammlung an Informationen. Noch nie war es so einfach möglich sich Wissen anzueignen. Die Komplexität der dafür benötigten Technik und die Flüchtigkeit der Informationsmedien lässt auch vermuten, dass dieser Zustand nicht ewig anhalten wird.
-    Doch diese Chance wird von vielen Menschen nicht genutzt. 
-    Anstatt, dass  Verfahren erarbeitet werden, die Informationen zu Bewerten, werden die Prinzipien der wissenschaftlichen Evidenz abgelehnt. Anstatt, dass Menschen sich aus den Informationen Wissen generieren, werden überprüfbare Fakten wie dem Klimawandel nicht geglaubt.\\
-    Es scheint als wären diese Menschen der Flut an Informationen überdrüssig, als wende sich ein großer Teil überfordert davon ab.
-    Die Frage ist, was kann dazu beitragen dieses Potential mehr zu nutzen? Was kann der Transfer von der reinen Information hin zum Wissen erleichtern und ermöglichen? Über welche Mittel verfügt die Informatik, Daten in einen Kontext einzubetten, über die Menschen an wissenschaftliche Daten herangeführt werden können?
     
-    Hier bietet das Argoprogramm das Potential die hierfür benötigten Daten bereitzustellen. Unter einer freien Datenpolitik werden seit Anfang dieses Jahrtausends Daten über Druck, Salzgehalt und Leitfähigkeit der oberen 2000 Meter Wassersäule der Weltmeere gesammelt. Diese Daten dienen Wissenschaftler um die Auswirkungen des globalen Klimawandels zu untersuchen.
+    Die im Jahre 1965 von Gordon Moore vorhergesagte Gesätzmäßigkeit, das sich die Komplexität, und damit die Speicherdichte integrierter Schaltkreise regelmäßig verdoppeln,  hat sich bis zum heutigen Tag bewahrheitet. Damit sieht sich die Menschheit heute in einer einmaligen Lage. Wir besitzen über eine so noch nie dagewesene Ansammlung an Informationen. Durch die wachsende Komplexität der dafür benötigten Technik werden die Medien zur Speicherung auch immer flüchtiger und schwieriger in der Handhabung. Werden kommende Zivilisationen in der Lage sein, diesen Pool an Informationen für sich zu nutzen oder sollten wir vielmehr annehmen, dass wir eine einmalige Chance haben, die wir nicht vergeuden sollten? \\
+    
+    Was hält uns davon ab, Bildung und Wohlstand aus diesem Pool zu generieren? Viele der Informationen stehen frei zur Verfügung und können genutzt werden und doch werden gerade in dieser Zeit die Prinzipien der wissenschaftlichen Evidenz von einem gefühlt immer größeren Anteil unseres Kulturkreises abgelehnt. 
+    In einer Zeit in der es einfacher den je ist, Fakten zu überprüfen, werden wissenschaftlich bewiesenen Aussagen wie dem Klimawandel einfach nicht geglaubt.
+    Es scheint als wären viele Menschen der Flut an Informationen überdrüssig, als wende sich ein großer Teil überfordert davon ab.
+    Die Frage ist, was kann dazu beitragen dieses Potential mehr zu nutzen? 
+    Über welche Mittel verfügt die Informatik, Daten in einen Kontext einzubetten, über die Menschen an  die wissenschaftliche Arbeit herangeführt werden können? Welche Daten sind geeignet, um die Brisanz und das Potential unserer Zeit einem breiteren Publikum zuzuführen.
+    
+    Hier bietet das Argoprogramm eine Möglichkeit die hierfür benötigten Daten bereitzustellen. Unter dem Dach dieses Programms, werden seit anfang dieses Jahrtausends die Weltmeere nach den Parametern Temperatur, Salzgehalt und Leitfähigkeit untersucht. Diese Daten stehen unter einer freien Lizenz zur Verfügung und können in eigene Projekte eingebunden werden.  Diese dienen Wissenschaftlern um die Auswirkungen des globalen Klimawandels zu untersuchen.
    
-    Ziel dieser Arbeit ist eine einfache Darstellung dieser Daten. Über ein exploratives Werkzeug werden die wissenschaftlichen Daten intuitiv erfahrbar sein. Dies geschieht mit der Hoffnung, hier eine Identifikation mit den Messwerten und des wissenschaftlichen Prozesses zu erreichen. 
+    Ziel dieser Arbeit ist eine einfache Darstellung aus diese Messwerten zu erarbeiten. Über ein exploratives Werkzeug sollen die  die wissenschaftlichen Daten intuitiv erfahrbar sein. Dies geschieht mit der Hoffnung, hier eine Identifikation mit den Messwerten und des wissenschaftlichen Prozesses zu erreichen. 
    
-    Als eine mögliche Zielgruppe, wären Schulklassen zu sehen. Diese können durch eine Kontextvorgabe des Lehrenden  die Auswirkungen des Klimawandels auf die Weltmeere auswerten. Es kann auch das Interesse an der Arbeit der Wissenschaftler aus dem Argo Programm geschaffen werden. 
-    Das Angebot richtet sich aber nicht explizit an heranwachsende. Auch erwachsene Personen können sich hier bei Interesse weiterbilden. Die Applikation kann hier außerhalb der wissenschaftlichen Arbeit,  die Relevanz der Forschung und die in diesem Programm erhobenen Messwerte sehen. 
+   
+    Diese Anwendung wäre zum Beispiel für Schulklassen geeignet. Die Schüler können durch eine Kontextvorgabe des Lehrenden  die Auswirkungen des Klimawandels auf die Weltmeere für sich explorieren. Zusätzlich könnte beim ein oder anderen Interesse an der wissenschaftlichen Arbeit geweckt werden.
+    Das Angebot richtet sich aber nicht explizit an heranwachsende. Auch erwachsene Personen können sich hier bei Interesse weiterbilden. Die Applikation kann hier außerhalb der wissenschaftlichen Arbeit die Relevanz der Forschung und die in diesem Programm erhobenen Messwerte  erfahrbar machen. 
     
     Am Anfang dieser Arbeit wird das Argo Programm vorgestellt. es wird der Prozess der Datenerhebung und -veröffentlichung eingegangen. 
     Im Anschluss werden die Anforderungen für die zu entwickelte Software ausgearbeitet und damit die geeignetsten Werkzeuge ermittelt.
