--- a/BA_argo_doc/anforderungen.tex
+++ b/BA_argo_doc/anforderungen.tex
@@ -80,7 +80,9 @@ Um die Darstellung zu vereinfachen und die Kommunikation mit der Datenbank zu be
 Aus diesem Grund findet sich im Folgenden eine Auswahl aus dem Datenkatalog \footnote{Siehe Quelle \cite{ArgoUserManual} S. 19 ff.} von Argo mit der jeweiligen Begründung:
 
 \begin{center}
-    \begin{tabular}{ | l | p{4cm} |p{6cm} |}
+\begin{table}
+  \label{table:Datenauswahl}
+  \begin{tabular}{ | l | p{4cm} |p{6cm} |}
     \hline
     \textbf{Datenfeld} & \textbf{Beschreibung} & \textbf{Wird verwendet weil} \\\hline
    
@@ -116,6 +118,8 @@ Aus diesem Grund findet sich im Folgenden eine Auswahl aus dem Datenkatalog \foo
         & Messvektoren des Salzgehaltes
         & Ein weiterer Parameter, um die Auswirkungen des Klimawandels zu erfahren. Durch das Schmelzen der großen Eissschelfs an den Polen des Planeten ist eine Verringerung des Salzgehaltes der meere zu erwarten. \\\hline
     \end{tabular}
+      \caption{Auswahl der Daten aus dem ArgoProgramm}
+\end{table}
 \end{center}
 
  
