Doc - Einleitung weiter.

--- a/BA_argo_doc/einleitung.tex
+++ b/BA_argo_doc/einleitung.tex
@@ -2,9 +2,10 @@
 \section{Einleitung}
 
     
-    Die im Jahre 1965 von Gordon Moore vorhergesagte Gesätzmäßigkeit, das sich die Komplexität, und damit die Speicherdichte integrierter Schaltkreise regelmäßig verdoppeln,  hat sich bis zum heutigen Tag bewahrheitet. Damit sieht sich die Menschheit heute in einer einmaligen Lage. Wir besitzen über eine so noch nie dagewesene Ansammlung an Informationen. Durch die wachsende Komplexität der dafür benötigten Technik werden die Medien zur Speicherung auch immer flüchtiger und schwieriger in der Handhabung. Werden kommende Zivilisationen in der Lage sein, diesen Pool an Informationen für sich zu nutzen oder sollten wir vielmehr annehmen, dass wir eine einmalige Chance haben, die wir nicht vergeuden sollten? \\
+    Die im Jahre 1965 von Gordon Moore vorhergesagte Gesätzmäßigkeit, die Komplexität, und damit die Speicherdichte, integrierter Schaltkreise, würden sich regelmäßig verdoppeln,  hat sich bis zum heutigen Tag bewahrheitet. Damit sieht sich die Menschheit über 50 Jahre später in einer einmaligen Lage. 
+    Zum einen verfügen wir über eine noch nie dagewesene Ansammlung an Informationen, zum anderen wurden die Speichermedien, durch die wachsende Komplexität immer flüchtiger und schwieriger in der Handhabung. Werden kommende Zivilisationen in der Lage sein, diesen Pool an Informationen für sich zu nutzen oder sollten wir vielmehr annehmen, dass wir eine einmalige Chance haben, die wir nicht vergeuden sollten? \\
     
-    Was hält uns davon ab, Bildung und Wohlstand aus diesem Pool zu generieren? Viele der Informationen stehen frei zur Verfügung und können genutzt werden und doch werden gerade in dieser Zeit die Prinzipien der wissenschaftlichen Evidenz von einem gefühlt immer größeren Anteil unseres Kulturkreises abgelehnt. 
+    Was hält uns davon ab, Bildung und Wohlstand aus diesem Pool zu generieren? Viele der Informationen stehen frei zur Verfügung und können genutzt werden und doch werden gerade in dieser Zeit die Prinzipien der wissenschaftlichen Evidenz von einem, gefühlt immer größeren Anteil unseres Kulturkreises, abgelehnt. 
     In einer Zeit in der es einfacher den je ist, Fakten zu überprüfen, werden wissenschaftlich bewiesenen Aussagen wie dem Klimawandel einfach nicht geglaubt.
     Es scheint als wären viele Menschen der Flut an Informationen überdrüssig, als wende sich ein großer Teil überfordert davon ab.
     Die Frage ist, was kann dazu beitragen dieses Potential mehr zu nutzen? 
